fixed overlap into hero section

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,1 @@
 @import "tailwindcss";
-
-.video-wr::before {
-    background: linear-gradient(-160deg, rgba(251,249,251, .7), rgba(241,215,230, .7), rgba(252,215,178, .7));
-}
